add music aside

--- a/themes/Butterfly/layout/includes/aside.pug
+++ b/themes/Butterfly/layout/includes/aside.pug
@@ -16,6 +16,9 @@ if theme.aside.card_tags
 if theme.aside.card_archives
   include widget/card_archives.pug
 
+if theme.aplayer.enable
+  include widget/aplayer.pug
+
 if theme.aside.card_webinfo
   include widget/card_webinfo.pug
 
