--- a/themes/Butterfly/layout/includes/aside.pug
+++ b/themes/Butterfly/layout/includes/aside.pug
@@ -1,3 +1,6 @@
+//- if theme.aside.card_clock
+//-   include widget/card_clock.pug
+
 if theme.aside.card_author
   include widget/card_author.pug
 
