--- a/themes/Butterfly/layout/includes/aside.pug
+++ b/themes/Butterfly/layout/includes/aside.pug
@@ -1,5 +1,5 @@
-//- if theme.aside.card_clock
-//-   include widget/card_clock.pug
+if theme.aside.card_clock
+  include widget/card_clock.pug
 
 if theme.aside.card_author
   include widget/card_author.pug
