--- a/themes/Butterfly/layout/includes/widget/card_clock.pug
+++ b/themes/Butterfly/layout/includes/widget/card_clock.pug
@@ -8,3 +8,27 @@
     //- <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_tr.js"></script>
     //- <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script>
     //- <iframe weather.seniverse.com/?token=70de45c5-5c87-45cc-a597-311a8ec72a4e ></iframe>
+    <div class="gn_box">
+    <h1>
+    <font size="3px" color="#E80017">2</font>
+    <font size="3px" color="#D1002E">0</font>
+    <font size="3px" color="#BA0045">2</font>
+    <font color="#A3005C" size="3px">0</font>
+    <font color="#8C0073" size="3px">年</font>
+    <font color="#75008A" size="3px">-</font>
+    <font size="3px" color="#5E00A1">新</font>
+    <font size="3px" color="#4700B8">年</font>
+    <font size="3px" color="#3000CF">倒</font>
+    <font size="3px" color="#1900E6">计</font>
+    <font size="3px" color="#0200FD">时</font>
+    </h1>
+    <center>
+    <div id="CountMsg" class="HotDate">
+      <span id="t_d"></span>
+      <span id="t_h"></span>
+      <span id="t_m"></span>
+      <span id="t_s"></span>
+    </div>
+    </center>    
+    </div>
+    
