--- a/themes/Butterfly/source/css/_layout/head.styl
+++ b/themes/Butterfly/source/css/_layout/head.styl
@@ -24,7 +24,7 @@
 
     .social-icon
       margin: 0 0.5rem
-      color: $light-grey
+      color: $light-black
       text-shadow: 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.15)
       font-size: .9rem
       cursor: pointer
@@ -39,7 +39,7 @@
 
 #site-title,
 #site-sub-title
-  color: $light-grey
+  color: $light-black
   text-align: center
   text-shadow: 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.15)
   line-height: 1.5
@@ -86,14 +86,14 @@
   .toggle-menu
     display: none
     padding-top: 0.6rem
-    color: $light-grey
+    color: $light-black
     cursor: pointer
 
     &:hover
       color: $white
   
   a
-    color: $light-grey
+    color: $light-black
     text-decoration: none
 
     &:hover
