--- a/themes/Butterfly/layout/includes/nav.pug
+++ b/themes/Butterfly/layout/includes/nav.pug
@@ -7,7 +7,8 @@ if is_home()
     .nav_bg(style=bg_img)
     #site-info
       #site-title
-        span.blogtitle= page.title || page.tag || page.category || config.title
+        //- span.blogtitle= page.title || page.tag || page.category || config.title
+        img(src =config.titlePic)
       #site-sub-title
         span.subtitle
         
