--- a/themes/Butterfly/layout/includes/nav.pug
+++ b/themes/Butterfly/layout/includes/nav.pug
@@ -8,16 +8,21 @@ if is_home()
     #site-info
       #site-title
         //- span.blogtitle= page.title || page.tag || page.category || config.title
+        <section class="nebula-hero-power rellax" data-rellax-speed="30" >
+        <section class="nebula-feature-container" style="transition-duration: 170ms; transform: rotateX(-2.67858deg) rotateY(-14.7589deg);">
+        <div class="nebula-feature">        
         img(src =config.titlePic)
+        </div>
+        </section></section>
       #site-sub-title
         span.subtitle
-        
+
       if(theme.social)
         #site-social-icons
           each url, icon in theme.social
             a.social-icon(href=url target="_blank")
               i(class=icon)
-      
+
     .scroll-down
       i.fa.fa-angle-down.scroll-down-effects
 
@@ -26,7 +31,7 @@ else
     .nav_bg(style=bg_img)
     #page_site-info
       #site-title
-          if (is_archive()) 
-            span.blogtitle= _p('archives')
-          else
-            span.blogtitle= page.title || page.tag || page.category || config.title
+        if (is_archive()) 
+          span.blogtitle= _p('archives')
+        else
+          span.blogtitle= page.title || page.tag || page.category || config.title
